--- a/finsight-client-v2/finsight/package.json
+++ b/finsight-client-v2/finsight/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
