--- a/finsight-client-v2/finsight/package.json
+++ b/finsight-client-v2/finsight/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "chart.js": "^4.4.1",
+    "create-vite": "^5.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
